Remove `SetSpec` interface, refactor 'common' module and introduce tests for it.